crates/ruff_python_parser/tests/snapshots/invalid_syntax@for_stmt_invalid_target_binary_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/for_stmt_invalid_target_binary_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..124,
        body: [
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 0..24,
                    is_async: false,
                    target: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 4..14,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 4..5,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            comparisons: [
                                (
                                    NotIn,
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 18..19,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 25..45,
                    is_async: false,
                    target: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 29..35,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 29..30,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            comparisons: [
                                (
                                    Eq,
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 34..35,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 39..40,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 42..45,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 42..45,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 46..66,
                    is_async: false,
                    target: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(None),
                            range: 50..56,
                            op: Or,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 50..51,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 55..56,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 60..61,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 63..66,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 63..66,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 67..83,
                    is_async: false,
                    target: UnaryOp(
                        ExprUnaryOp {
                            node_index: NodeIndex(None),
                            range: 71..73,
                            op: USub,
                            operand: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 72..73,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 77..78,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 80..83,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 80..83,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 84..103,
                    is_async: false,
                    target: UnaryOp(
                        ExprUnaryOp {
                            node_index: NodeIndex(None),
                            range: 88..93,
                            op: Not,
                            operand: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 92..93,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 97..98,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 100..103,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 100..103,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 104..123,
                    is_async: false,
                    target: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 108..113,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 108..109,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: BitOr,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 112..113,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 117..118,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 120..123,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 120..123,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for x not in y in z: ...
  |     ^^^^^^^^^^ Syntax Error: Invalid assignment target
2 | for x == y in z: ...
3 | for x or y in z: ...
  |


  |
1 | for x not in y in z: ...
2 | for x == y in z: ...
  |     ^^^^^^ Syntax Error: Invalid assignment target
3 | for x or y in z: ...
4 | for -x in y: ...
  |


  |
1 | for x not in y in z: ...
2 | for x == y in z: ...
3 | for x or y in z: ...
  |     ^^^^^^ Syntax Error: Invalid assignment target
4 | for -x in y: ...
5 | for not x in y: ...
  |


  |
2 | for x == y in z: ...
3 | for x or y in z: ...
4 | for -x in y: ...
  |     ^^ Syntax Error: Invalid assignment target
5 | for not x in y: ...
6 | for x | y in z: ...
  |


  |
3 | for x or y in z: ...
4 | for -x in y: ...
5 | for not x in y: ...
  |     ^^^^^ Syntax Error: Invalid assignment target
6 | for x | y in z: ...
  |


  |
4 | for -x in y: ...
5 | for not x in y: ...
6 | for x | y in z: ...
  |     ^^^^^ Syntax Error: Invalid assignment target
