crates/ruff_python_parser/tests/snapshots/invalid_syntax@for_stmt_missing_in_keyword.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/for_stmt_missing_in_keyword.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: [
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 4..5,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..7,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 9..12,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 9..12,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 13..23,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 17..18,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 18..18,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 20..23,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 20..23,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for a b: ...
  |       ^ Syntax Error: Expected `in`, found identifier
2 | for a: ...
  |


  |
1 | for a b: ...
2 | for a: ...
  |      ^ Syntax Error: Expected `in`, found `:`
